# newtype

./: .gitignore  CHANGES.md  LICENSE  newtype.cabal
.github/workflows/: haskell-ci.yml
Control/: Newtype.hs
