cabal-version:       1.12
build-type:          Simple
name:                newtype
version:             0.2.2.1

license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel, Darius Jahandarie, Conor McBride
maintainer:          Andreas Abel
category:            Control
bug-reports:         https://github.com/hvr/newtype/issues

synopsis:            A typeclass and set of functions for working with newtypes.
description:         Per Conor McBride, the 'Newtype' typeclass represents the packing and unpacking of a @newtype@, and allows you to operate under that @newtype@ with functions such as 'ala'. See "Control.Newtype" for documentation and examples.

tested-with:
   GHC == 9.14.1
   GHC == 9.12.2
   GHC == 9.10.3
   GHC == 9.8.4
   GHC == 9.6.7
   GHC == 9.4.8
   GHC == 9.2.8
   GHC == 9.0.2
   GHC == 8.10.7
   GHC == 8.8.4
   GHC == 8.6.5
   GHC == 8.4.4
   GHC == 8.2.2
   GHC == 8.0.2

extra-source-files:    CHANGES.md

source-repository head
  type:     git
  location: https://github.com/hvr/newtype.git

library
  exposed-modules:     Control.Newtype

  build-depends:       base >= 4.9 && < 5

  default-language:    Haskell2010
  other-extensions:
    CPP
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    Trustworthy
    TypeFamilies

  ghc-options:
    -Wall
    -Wno-trustworthy-safe
